# CApplication

./: README.md  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/lishoulin/capplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-diff.cpp  native-lib.cpp  simple.c  simple.h  test.cpp  test.h  testextrn.cpp
app/src/main/java/com/example/lishoulin/capplication/: Application.java  FileObserve.java  JNINativeBridge.java  JniBridge.kt  Main2Activity.java  MainActivity.java  MainKtActivity.kt  MediaFileUtil.java  Permission.java  PermissionsFragment.java  PermissionsUtil.java  User.java
app/src/main/res/layout/: activity_main2.xml  activity_test.xml  activity_test2.xml
app/src/main/res/values/: strings.xml
app/src/main/test/: test.c
app/src/test/java/com/example/lishoulin/capplication/: ExampleUnitTest.java
bspatch/: CMakeLists.txt  build.gradle
bspatch/src/androidTest/java/com/xf/bspdiff/: ExampleInstrumentedTest.java
bspatch/src/main/: AndroidManifest.xml
bspatch/src/main/cpp/: bspatch.c  bspatch.h  native-lib.cpp  signature.cpp
bspatch/src/main/java/com/xf/bspdiff/: ApkUtil.java  MainActivity.java
bspatch/src/main/res/layout/: activity_main.xml
bspatch/src/main/res/values/: strings.xml
bspatch/src/test/java/com/xf/bspdiff/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
